*** WooCommerce Subscriptions Core Changelog ***

= 6.2.0 - 2023-xx-xx =
* Fix - Ensure subscription checkout and cart block integrations are loaded on store environments where WooPayments is not enabled.
* Fix - Ensure the shipping phone number field is copied to subscriptions and their orders when copying address meta.
* Update - When HPOS is disabled, fetch subscriptions by customer_id using the user's subscription cache to improve performance.

= 6.1.0 - 2023-07-26 =
* Fix - Resolved an issue that prevented the "Used for variations" checkbox to not be enabled on the edit product page load causing variations to be deleted erroneously.
* Dev - Fixed wcs_get_subscription_orders() returning an empty list when querying parent orders when HPOS is enabled with data syncing off.

= 6.0.0 - 2023-07-18 =
* Fix - Resolve an issue that prevented the "Used for variations" checkbox from being enabled on the variable subscription product edit screen on WC version v7.9.0.

= 5.9.0 - 2023-07-14 =
* Fix - Ensure when a customer changes the shipping method on cart and checkout that the recurring totals correctly reflect the chosen method.

= 5.8.0 - 2023-07-05 =
* Fix - When HPOS is enabled, permanently deleting a subscription related order wasn't updating the related orders cache properly.
* Fix - Added logic to check if the recurring cart array is present before displaying the recurring totals section in the cart.

= 5.7.2 - 2023-06-05 =
* Fix - Resolved an issue with customers being redirected to an incorrect Pay for Order URL after login.

= 5.7.1 - 2023-05-11 =
* Dev - Resolve errors for third-party code using the URLs returned from WC_Subscriptions_Admin::add_subscription_url() and WCS_Cart_Renewal::get_checkout_payment_url() because they were erroneously escaped. #440
* Dev - Enable third-party code to alter the delete payment token URL returned from flag_subscription_payment_token_deletions. #440

= 5.7.0 - 2023-05-04 =